This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: A compiler warning in winreg.SetValue()
Type: Stage: resolved
Components: Windows Versions: Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, miss-islington, paul.moore, steve.dower, tim.golden, zach.ware
Priority: normal Keywords: patch

Created on 2019-04-20 07:10 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 12882 merged ZackerySpytz, 2019-04-20 07:12
PR 12911 merged miss-islington, 2019-04-22 17:08
Messages (3)
msg340564 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2019-04-20 07:10
The warning can be seen on some buildbots (e.g. https://buildbot.python.org/all/#/builders/12/builds/2269).

d:\buildarea\3.x.ware-win81-release\build\pc\winreg.c(1617): warning C4244: 'function': conversion from 'Py_ssize_clean_t' to 'DWORD', possible loss of data
msg340661 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2019-04-22 17:08
New changeset 34366b7f914eedbcc33aebe882098a2199ffaf82 by Steve Dower (Zackery Spytz) in branch 'master':
bpo-36672: Fix a compiler warning in winreg.SetValue() (GH-12882)
https://github.com/python/cpython/commit/34366b7f914eedbcc33aebe882098a2199ffaf82
msg340665 - (view) Author: miss-islington (miss-islington) Date: 2019-04-22 17:31
New changeset 36aecc0079af0ec65add8ffb5bcdea9a594baca4 by Miss Islington (bot) in branch '3.7':
bpo-36672: Fix a compiler warning in winreg.SetValue() (GH-12882)
https://github.com/python/cpython/commit/36aecc0079af0ec65add8ffb5bcdea9a594baca4
History
Date User Action Args
2022-04-11 14:59:14adminsetgithub: 80853
2019-09-11 11:26:24steve.dowersetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2019-04-22 17:31:56miss-islingtonsetnosy: + miss-islington
messages: + msg340665
2019-04-22 17:08:16miss-islingtonsetpull_requests: + pull_request12838
2019-04-22 17:08:10steve.dowersetmessages: + msg340661
2019-04-20 07:12:46ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request12807
2019-04-20 07:10:18ZackerySpytzcreate