bpo-36672: Fix a compiler warning in winreg.SetValue() (GH-12882)